@@ -70,7 +70,7 @@ namespace MonoDevelop.Database.ConnectionManager
 			icon = Context.GetIcon ("md-db-tables");
 			
 			BaseNode node = (BaseNode) dataObject;
-			node.RefreshEvent += RefreshHandler;
+			node.RefreshEvent += (EventHandler)(DispatchService.GuiDispatch (RefreshHandler));
 		}
 		
 		public override void BuildChildNodes (ITreeBuilder builder, object dataObject)
@@ -93,12 +93,11 @@ namespace MonoDevelop.Database.ConnectionManager
 			if (constraints == null)
 				return;
 			
-			foreach (ConstraintSchema constraint in constraints) {
-				DispatchService.GuiDispatch (delegate {
+			DispatchService.GuiDispatch (delegate {
+				foreach (ConstraintSchema constraint in constraints)
 					builder.AddChild (constraint);
-					builder.Expanded = true;
-				});
-			}
+				builder.Expanded = true;
+			});
 		}
 		
 		public override bool HasChildNodes (ITreeBuilder builder, object dataObject)
