@@ -149,11 +149,16 @@ namespace MonoDevelop.Database.ConnectionManager
 		[CommandHandler (ConnectionManagerCommands.Refresh)]
 		protected void OnRefresh ()
 		{
-			CurrentNode.MoveToParent ();
 			BaseNode node = CurrentNode.DataItem as BaseNode;
-			if (node != null)
+			node.Refresh ();
+		}
+		
+		protected void OnRefreshParent ()
+		{
+			if (CurrentNode.MoveToParent ()) {
+				BaseNode node = CurrentNode.DataItem as BaseNode;
 				node.Refresh ();
-			CurrentNode.ExpandToNode ();
+			}
 		}
 		
 		[CommandHandler (ConnectionManagerCommands.AlterProcedure)]
@@ -193,6 +198,7 @@ namespace MonoDevelop.Database.ConnectionManager
 			ISchemaProvider provider = node.ConnectionContext.SchemaProvider;
 			
 			provider.DropProcedure (node.Procedure);
+			OnRefreshParent ();
 		}
 		
 		[CommandHandler (ConnectionManagerCommands.Rename)]
