@@ -1,5 +1,7 @@
 2007-08-03  Ben Motmans <ben.motmans@gmail.com>
 
+	* NodeBuilders/*: various fixes for refreshing nodes
+
 	* NodeBuilders/ConnectionContextNodeBuilder.cs: Added a connect command and correctly implemented
 	the DropDatabase command
 	* use the DispatchService as a static class instead of a service
